# luntai-ds

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi-publish.yml
SimpleDs/CommonTools/: data_structure.py  dbapi.py  dtyper.py  login.py  obj_storage.py  remote.py  schema_manager.py  settings.py  sparker.py  utils.py
SimpleDs/CommonTools/SnapStructure/: dependency.py  structure.py  tools.py
SimpleDs/ModelingTools/: Evaluation.py  ModelServing.py
SimpleDs/ModelingTools/CustomModel/: calibration.py  custom.py  linear.py  ordinal.py
SimpleDs/ModelingTools/Evaluation/: plots.py
SimpleDs/ModelingTools/Explore/: plots.py  preview.py  profiling.py  stat.py
SimpleDs/ModelingTools/FeatureEngineer/: featureHelper.py  feature_selection.py  preprocessing.py  transformers.py
SimpleDs/ModelingTools/utils/: analytical_dtype.py  checks.py  support.py
SimpleDs/ProviderTools/airflow/: api.py
SimpleDs/ProviderTools/aws/: s3.py  snap_struct.py
SimpleDs/ProviderTools/clickhouse/: dbapi.py  dtyper.py  snap_struct.py
SimpleDs/ProviderTools/gcp/: dbapi.py  gcs.py  snap_struct.py
SimpleDs/ProviderTools/mongo/: schema_manager.py
SimpleDs/ProviderTools/ssh/: schema_manager.py  sftp.py  snap_struct.py
SimpleDs/ProviderTools/teradata/: dbapi.py
SimpleDs/test/: modeling.ipynb  supermarket-campaign.ipynb  test-ibis.ipynb
SimpleDs/tests/: supermarket-campaign.ipynb  test-ibis.ipynb
examples/: modeling.ipynb  supermarket-campaign.ipynb  test-ibis.ipynb
luntaiDs/CommonTools/: accessor.py  dbapi.py  login.py  schema_manager.py  sparker.py  utils.py  warehouse.py
luntaiDs/CommonTools/SnapStructure/: dependency.py  structure.py  tools.py
luntaiDs/ModelingTools/: ModelServing.py
luntaiDs/ModelingTools/CustomModel/: custom.py  ordinal.py  sampler.py  splitter.py
luntaiDs/ModelingTools/Evaluation/: metrics.py  plots.py
luntaiDs/ModelingTools/Explore/: plots.py  preview.py  profiling.py  summary.py
luntaiDs/ModelingTools/Explore/engines/: base.py  ibis.py  pandas.py
luntaiDs/ModelingTools/FeatureEngineer/: feature_selection.py  preprocessing.py  transformers.py
luntaiDs/ModelingTools/Serving/: data_registry.py  model_registry.py  timetable.py
luntaiDs/ModelingTools/utils/: parallel.py
luntaiDs/ProviderTools/aws/: s3.py
luntaiDs/ProviderTools/clickhouse/: dbapi.py  serving.py  snap_struct.py
luntaiDs/ProviderTools/gcp/: dbapi.py  gcs.py  serving.py  snap_struct.py
luntaiDs/ProviderTools/mlflow/: dtyper.py
luntaiDs/ProviderTools/mongo/: schema_manager.py  serving.py
luntaiDs/ProviderTools/ssh/: schema_manager.py  serving.py  sftp.py  snap_struct.py
luntaiDs/ProviderTools/teradata/: dbapi.py
tests/: test_module.py
(+4 files in other folders)
