[metadata]
name = luntaiDs
version = 0.0.1
author = luntaixia
author_email = ailunqian124@gmail.com
description = Make Data Scientist life Easier Tool
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True